VELOCITY-630 revert errant change for VELOCITY-285 but make that behavior easy to replicate with a Foreach subclass
git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@705288 13f79535-47bb-0310-9956-ffa450edef68